--- a/jcgs_reviewer/reviewer_ae.tex
+++ b/jcgs_reviewer/reviewer_ae.tex
@@ -30,7 +30,7 @@
 			In recent years, there has been much interest in combining regularization methods to produce models with multiple desired characteristics. For example, the elastic net (Zou \& Hastie 2003) combines the lasso and ridge penalties; and the sparse group lasso (Simon et al. 2013) combines the group lasso and lasso penalties. In Bayesian regression, a popular method for pruning irrelevant features is to use automatic relevance determination, which associates each feature with a separate regularization parameter (Neal 1996). Finally, neural networks commonly use regularization to control the weights at each node. Snoek et al. (2012) showed that using separate regularization parameters for each layer in a neural network can improve performance. From a theoretical viewpoint, multiple regularization parameters are required in certain cases to achieve oracle convergence rates. van de Geer \& Muro (2014) showed that when fitting additive models with varying levels of smoothness, the penalty parameter should be lower for more ``wiggly'' functions and vice versa. 
 		\end{quote}
 		
-		\point{Some important details have been omitted from the empirical results. Full reproducibility is expected}
+		\point{Some important details have been omitted from the empirical results. Full reproducibility is expected.}
 		
 		\reply We apologize for omitting some simulation details. We included the number of simulation runs used in Section 3. We also specify the parameters used in the gradient descent procedure in Section 2.5. \textcolor{red}{Can we put up our code somewhere?}
 		
@@ -41,9 +41,11 @@
 		The new sections are as follows. Section 2.4.4 introduces low-rank matrix completion and illustrates how to transform the joint optimization problem into an equivalent smooth joint optimization problem. Section 3.4 provides simulation results. Section A.3.4 in the Appendix provides more details on how to calculate the gradient and shows the conditions in Theorem 1 are satisfied. 
 		
 		
-		\point{The technical conditions seem quite restrictive from a practical point of view, and need further explanation/justification (or weakening)}
+		\point{The technical conditions seem quite restrictive from a practical point of view, and need further explanation/justification (or weakening).}
 		
-		\reply We apologize for the confusion regarding the technical conditions. Reviewer 2 was concerned that our paper would not be applicable to high-dimensional problems since we had previously specified that the objective function must be strictly convex. Reviewer 2 is correct that our paper does not actually need the strict convexity assumption. We have removed this from the text. Our results only depend on the conditions specified in Theorem 1. These conditions include many popular penalized regression settings. \textcolor{red}{do we show this? Or just state it? If it's just stated, why do we think it's true? This response is a bit weak and needs to be improved}
+		\reply We apologize for the confusion regarding the technical conditions. Reviewer 2 was concerned that our paper would not be applicable to high-dimensional problems since we had previously specified that the objective function must be strictly convex. Reviewer 2 is correct that our paper does not actually need the strict convexity assumption. We have removed this from the text. Our results only depend on the conditions specified in Theorem 1. 
+		
+		The most restrictive condition is probably Condition 1, which requires that the local optimality space is also a differentiable space. In our paper, we showed that this condition is likely to hold for the lasso, group lasso, and nuclear norm penalty. We hypothesize that the condition is likely to hold more generally for non-smooth convex penalties. If we think of the penalized problem in its constrained form, the solution is the minimizer of unpenalized loss function that lies in the constraint region. For non-smooth penalty functions, the constraint region has many edges and corners; thus the constrained minimizer is likely to occur at a these non-smooth regions. Since the constrained minimizer perturbs continuously with respect to the penalty parameters, it will likely remain on the same edge/corner. As long as we remain on the same edge/corner, the optimality space and the differentiable space both stay the same and they are likely equal.
 		
 		\point{Make sure to provide all code for all experiments}
 		
