--- a/nonsmooth_rewrite/hillclimbing_nonsmooth.tex
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth.tex
@@ -759,7 +759,7 @@ We now compare our gradient descent algorithm to gradient-free methods through s
 
 We compare the efficiency of the methods by the number of times the methods solved the inner training criterion (labeled ``\# Solves" in the tables below). We set this number to 100 for all three gradient-free methods. This number is variable for gradient descent since it depends on how fast the algorithm converges.
 
-There are two computational concerns when tuning regularization parameters by gradient descent. First, the gradient calculation can be slow if the matrix in \eqref{eq:gradient_hessian} is large. \citet{bengio2000gradient} and \citet{foo2008efficient} suggest backpropagating through a Cholesky decomposition or using conjugate gradients to speed this up. This is actually not an issue for problems with non-smooth training criteria since the solutions tend to be sparse, which result in small linear systems. The second concern is that the inner optimization problem must be solved to a high accuracy in order to calculate the gradient. (Recall that the gradient is derived via implicit differentiation.) To address this, we allow more iterations for solving the inner optimization problem. For a faster implementation of gradient descent, one can use a more specialized solver.
+There are two computational concerns when tuning regularization parameters by gradient descent. First, the gradient calculation can be slow for high-dimensional problems since the matrix in \eqref{eq:gradient_hessian} will be large. \citet{bengio2000gradient} and \citet{foo2008efficient} suggest backpropagating through a Cholesky decomposition or using conjugate gradients to speed this up. However, this is not a problem for the non-smooth regression problems that we consider. The computational time to calculate the gradient of the validation loss does not grow with the number of model parameters; instead it grows with the dimension of the differentiable/local optimality space. For example, in the lasso, the runtime scales with the number of nonzero features. Therefore we can efficiently calculate the gradient of the validation loss as long as the dimension of the differentiable space is small. The second concern is that the inner optimization problem must be solved to a high accuracy in order to calculate the gradient. (Recall that the gradient is derived via implicit differentiation.) To address this, we allow more iterations for solving the inner optimization problem. For a faster implementation of gradient descent, one can use a more specialized solver.
 
 In some of the examples, the models with many penalty parameters fit by gradient descent have much smaller validation errors compared to the test errors. The difference is particularly pronounced in the un-pooled sparse group lasso example in Section~\ref{sec:simulation_sgl}. There are two reasons for this behavior. First, the additional tuning parameters increase the model space and thus the ``degrees of freedom.'' Degrees of freedom relate directly to over-optimism \citep{tibshirani2015degrees}. Traditionally one thinks of over-optimism as the difference between a model's performance on future data and its training error. In the case of hyper-parameter tuning, performance on the validation data is the analog of the ``training error.''
 The second reason is that gradient descent can effectively find a near minimizer on the validation data in contrast to Nelder-mead and Spearmint. By failing to minimize the validation data, the latter two methods is similar to ending gradient descent before it has reached convergence. This technique called ``early stopping'' is another form of regularization that can control the degree of over-optimism \citep{yao2007early}. Hence the difference between the validation and test error is greater in gradient descent compared to Nelder-mead and Spearmint.
