update code and repo

--- a/jcgs_reviewer/reviewer_ae.tex
+++ b/jcgs_reviewer/reviewer_ae.tex
@@ -32,7 +32,7 @@
 		
 		\point{Some important details have been omitted from the empirical results. Full reproducibility is expected.}
 		
-		\reply We apologize for omitting some simulation details. We included the number of simulation runs used in Section 3. We also specify the parameters used in the gradient descent procedure in Section 2.5. \textcolor{red}{Can we put up our code somewhere?}
+		\reply We apologize for omitting some simulation details. We included the number of simulation runs used in Section 3. We also specify the parameters used in the gradient descent procedure in Section 2.5.
 		
 		\point{The empirical results cover a relatively small range of scenarios}
 		
@@ -49,7 +49,7 @@
 		
 		\point{Make sure to provide all code for all experiments}
 		
-		\reply We have included all the code for our experiments. In addition, we plan to make our code fully available on Github. \textcolor{red}{we should make it available and say where the repo is}
+		\reply We have included all the code for our experiments. In addition, our code is fully available on Github at https://github.com/jjfeng/nonsmooth-joint-opt.
 		
 		\point{They state in the abstract and in the paper: "For many penalized regression problems, the validation loss is actually smooth almost-everywhere with respect to the penalty parameters."  I assume that almost everywhere means "almost everywhere with respect to Lebesgue measure."  But of course, this same statement is true of the objective itself, for which gradient descent cannot be used.  The relevant condition seems to be to be whether the loss is smooth almost everywhere with respect to the probability measure induced by the true sampling model, which is not the case for e.g. lasso/group lasso/etc.  Can the authors please clarify and elaborate on this point?}
 		
