--- a/nonsmooth_rewrite/hillclimbing_nonsmooth.tex
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth.tex
@@ -4,6 +4,7 @@
 \usepackage{enumerate}
 \usepackage{natbib}
 \usepackage{url} % not crucial - just used below for the URL 
+\usepackage{setspace}
 
 %\pdfminorversion=4
 % NOTE: To produce blinded version, replace "0" with "1" below.
@@ -193,6 +194,7 @@ We can plug \eqref{implicitDifferentiation} into \eqref{chainrule} to get $\nabl
 \begin{algorithm}
 \caption{Gradient Descent for Smooth Training Criteria}
 \label{alg:smooth}
+\begin{spacing}{1}
 \begin{algorithmic}
         \STATE{
 	        	Initialize $\boldsymbol{\lambda}^{(0)}$.
@@ -234,8 +236,8 @@ We can plug \eqref{implicitDifferentiation} into \eqref{chainrule} to get $\nabl
 	}
 	\ENDFOR
 \end{algorithmic}
+\end{spacing}
 \end{algorithm}
-
 
 
 \subsection{Nonsmooth Training Criterion}
@@ -303,11 +305,7 @@ Note that if condition 3 is satisfied, the Hessian of $L_T \left(\cdot, \boldsym
 Putting all these conditions together, the following theorem establishes that the gradient exists almost everywhere and provides a recipe for calculating it.
 
 \begin{theorem}
-Suppose our optimization problem is of the form in \eqref{jointopt2}, with $L_T\left(\boldsymbol \theta, \boldsymbol{\lambda}\right)$ defined as in \eqref{train}.
-
-Suppose that $L \Big( \boldsymbol{y}_V, f_{\boldsymbol \theta}(\boldsymbol{X}_V)\Big)$ is continuously differentiable in $\boldsymbol \theta$, and conditions $1$, $2$, and $3$, defined above, hold.
-
-Then the validation loss $L(\boldsymbol{y_V}, f_{\hat {\boldsymbol\theta}(\boldsymbol{\lambda})}(\boldsymbol{X_V}))$ is continuously differentiable with respect to $\boldsymbol{\lambda}$ for almost every $\boldsymbol{\lambda}$. Furthermore, the gradient of $L(\boldsymbol{y_V}, f_{\hat \theta(\boldsymbol{\lambda})}(\boldsymbol{X_V}))$, where it is defined, is
+Suppose our optimization problem is of the form in \eqref{jointopt2}, with $L_T\left(\boldsymbol \theta, \boldsymbol{\lambda}\right)$ defined as in \eqref{train}. Suppose that $L \Big( \boldsymbol{y}_V, f_{\boldsymbol \theta}(\boldsymbol{X}_V)\Big)$ is continuously differentiable in $\boldsymbol \theta$, and conditions $1$, $2$, and $3$, defined above, hold. Then the validation loss $L(\boldsymbol{y_V}, f_{\hat {\boldsymbol\theta}(\boldsymbol{\lambda})}(\boldsymbol{X_V}))$ is continuously differentiable with respect to $\boldsymbol{\lambda}$ for almost every $\boldsymbol{\lambda}$. Furthermore, the gradient of $L(\boldsymbol{y_V}, f_{\hat \theta(\boldsymbol{\lambda})}(\boldsymbol{X_V}))$, where it is defined, is
 \begin{equation}
 \nabla_{\boldsymbol{\lambda}} L \left ( \boldsymbol{y_V}, f_{\hat {\boldsymbol \theta}(\boldsymbol{\lambda})}(\boldsymbol{X_V}) \right) =
 \left [ \left .
@@ -322,7 +320,6 @@ where
 \end{equation}
 \label{thethrm}
 \end{theorem}
-
 We can therefore construct a gradient descent procedure based on the model parameter constraint in \eqref{restrictedmodelparams}. At each iteration, let matrix $\boldsymbol U$ have orthonormal columns spanning the differentiable space $\Omega^{L_T(\cdot, \boldsymbol{\lambda})}(\hat {\boldsymbol \theta}(\boldsymbol{\lambda}))$. Since this space is also a local optimality space, it is sufficient to minimize the training criterion over the column space of $\boldsymbol U$. The joint optimization problem can be reformulated using $\boldsymbol U \hat {\boldsymbol \beta}(\boldsymbol{\lambda})$ as the model parameters instead:
 \begin{equation}
 \begin{array}{c}
@@ -344,6 +341,7 @@ Note that because the differentiable space is a local optimality space and is th
 
 \begin{algorithm}
 \caption{\label{alg:gradDescent} Gradient-based Joint Optimization}
+\begin{spacing}{1}
   \begin{algorithmic}
         \STATE{
         		Initialize $\boldsymbol{\lambda}^{(0)}$.
@@ -407,6 +405,7 @@ Note that because the differentiable space is a local optimality space and is th
 		}
 	\ENDFOR
   \end{algorithmic}
+\end{spacing}
 \end{algorithm}
 
 \subsection{Examples}\label{sec:examples}
@@ -802,14 +801,13 @@ Grid Search & 5.15 (0.44) & 5.47 (0.19) & 100 \\
 \subsection{Additive model with Smoothness and Sparsity Penalty}
 \label{sec:simulation_sparse_add}
 Each dataset consists of 100 training, 50 validation, and 50 test observations with $p=23$ covariates. The covariates $\boldsymbol{x_i} \in \mathbb{R}^{n}$ for $i=1,...p$ are equally spaced from -5 to 5 with a random displacement $ \delta \sim U(0, \frac{1}{300}) $ at the start and then shuffled randomly. The true model is the sum of three nonzero functions and 20 zero functions. Response $y$ was generated as follows:
-\begin{eqnarray*}
-\boldsymbol y &=& \sum\limits_{i=1}^p \boldsymbol f_i(\boldsymbol x_i) + \sigma \boldsymbol \epsilon\\
-f_1(x) &=& 9 \sin(3x)\\
-f_2(x) &=& x\\
-f_3(x) &=& 6 \cos(1.25 x) + 6 \sin(0.5 x + 0.5)\\
-f_i(x) &=& 0 \text{ for }   i=4,...,23
+\begin{align*}
+\boldsymbol y &= \sum\limits_{i=1}^3 \boldsymbol f_i(\boldsymbol x_i) + \sigma \boldsymbol \epsilon\\
+f_1(x) &= 9 \sin(3x)\\
+f_2(x) &= x\\
+f_3(x) &= 6 \cos(1.25 x) + 6 \sin(0.5 x + 0.5)
 \label{eq:simulation_sparse_add}
-\end{eqnarray*}
+\end{align*}
 where $\boldsymbol \epsilon \sim N(\boldsymbol 0, \boldsymbol I)$. $\sigma$ was chosen such that the signal to noise ratio was 2.
 
 Nelder-Mead and gradient descent were both initialized at $(10, 1, ..., 1)$ and $(0.1, 0.01, ..., 0.01)$. Nelder-Mead was allowed fifty iterations starting from each initialization point.
@@ -998,9 +996,9 @@ In this paper we showed how to calculate the exact gradient for joint optimizati
 
 The simulation studies show that for certain problems, separating the penalty parameters can improve model performance. However, it is crucial that the regularization parameters be tuned appropriately. For the same joint optimization problem with many penalty parameters, gradient descent is able to return good model fits whereas gradient-free methods like Nelder-Mead and Bayesian optimization tend to fail. In fact, when the optimization method is unable to tune the regularization parameters appropriately, we find that a simple grid search over the pooled two-parameter joint optimization problem can result in better models.
 
-Also, gradient descent tends to require a fewer number of times to solve the inner optimization problem. This makes the method quite appealing for problems that require large solve times. 
-
 Through our simulation studies, we did find that this gradient-based approach depends on solving the inner optimization problem to a higher level of accuracy than needed for gradient-free approaches. More work could be done to investigate the degree of accuracy required for gradient descent to still be effective.
+
+Since our algorithm depends on the validation loss being smooth almost everywhere, a potential concern is that the validation loss may not be differentiable at the solution of the joint optimization problem. We believe that this scenario occurs with measure zero. Furthermore, even if the the validation loss is not smooth at its minimizer, our descent procedure will still converge. For a more detailed discussion, refer to the Appendix.
 
 Finally, an open theoretical question is how much the model complexity increases when too many penalty parameters are introduced. Similar to how model parameters can overfit to their training data, it is possible for the penalty parameters to overfit to the training and validation data.
 
